2000-09-21  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/cypher.c (cypher): Give appropriate messages for
	verbs applied to "all" where nothing relevant is present.  From
	OpenBSD.
	* tests/battlestar.in27, tests/battlestar.out27: New test.
	* tests/battlestar.test: Update.

	* battlestar/com2.c (wearit, use, murder), battlestar/com3.c
	(shoot), battlestar/com4.c (take, throw, drop, eat),
	battlestar/com6.c (dooropen), battlestar/cypher.c (cypher),
	battlestar/parse.c (parse): Move all discarding of adjectives to
	parse().  From Paul Janzen <pjanzen@foatdi.harvard.edu>.  Fixes
	crash on "carry old all", shown up by fuzz testing.
	* tests/battlestar.in26, tests/battlestar.out26: New test.
	* tests/battlestar.test: Update.

	* battlestar/com2.c (murder): Give error rather than crashing on
	"kill all".  From OpenBSD.
	* tests/battlestar.in25, tests/battlestar.out25: New test.
	* tests/battlestar.test: Update.

	* battlestar/extern.h: Define and use WORDLEN.  From OpenBSD.
	* battlestar/globals.c: Also use WORDLEN.  From OpenBSD.
	* battlestar/battlestar.c (main): Use NWORD rather than 20 (from
	OpenBSD).  Avoid off-by-one error by using NWORD - 1.
	* battlestar/cypher.c (cypher): Increment wordnumber after INVEN.
	* battlestar/getcom.c (getword): Avoid overflowing elements of the
	words array.  From OpenBSD.
	* battlestar/words.c (wlist): Parse "," as AND.  From OpenBSD.
	* battlestar/parse.c (parse): Trim AND AND.  When an OBJECT AND
	EVERYTHING or NOUNS AND EVERYTHING sequence occurs, move the
	EVERYTHING to the beginning.  Trim EVERYTHING AND EVERYTHING.
	From OpenBSD.  Also disable parsing of "," as AND if followed by a
	verb.
	* tests/battlestar.in21, tests/battlestar.out21,
	tests/battlestar.in22, tests/battlestar.out22,
	tests/battlestar.in23, tests/battlestar.out23,
	tests/battlestar.in24, tests/battlestar.out24: New tests.
	* tests/battlestar.test: Update.

	* battlestar/com2.c (wearit): Don't attempt to wear anything with
	no short description.