@@ -1,3 +1,10 @@
+2000-09-22  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* battlestar/com4.c (take): Check for the object not being present
+	before checking for it being too heavy or bulky.
+	* tests/battlestar.in28, tests/battlestar.out28: New test.
+	* tests/battlestar.test: Update.
+
 2000-09-21  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* battlestar/cypher.c (cypher): Give appropriate messages for
